syntax = "proto3";

package DevicesTopicService;


option java_multiple_files = true;
option java_package = "com.antonigari.RealTimeDataService";
service GrpcDeviceTopicService {
  rpc GetAllDeviceTopic(GetAllDeviceTopicRequest) returns (GetAllDeviceTopicResponse);
}

message GetAllDeviceTopicRequest {
  // Define request fields if needed
}

message DeviceTopicGrpc {
  int64 id = 1;
  string topic = 2;
  string manufactureCode = 3;
}

message GetAllDeviceTopicResponse {
  repeated DeviceTopicGrpc deviceTopics = 1;
}